--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     </li>
                 </ul>
 
-                <img class="contact-img" src="./assets//icons/mess.png" />
+                <img class="contact-img hide-on-pc" src="./assets//icons/mess.png" />
             </div>
 
             <div class="filter">
