--- a/index.html
+++ b/index.html
@@ -136,7 +136,10 @@
                     </li>
                 </ul>
 
-                <img class="contact-img hide-on-pc" src="./assets//icons/mess.png" />
+                <img
+                    class="contact-img hide-on-pc"
+                    src="./assets//icons/mess.png"
+                />
             </div>
 
             <div class="filter">
@@ -174,6 +177,23 @@
             <figure class="room">
                 <div class="container">
                     <h2 class="room__heading">PHÒNG GIÁ TỐT DÀNH CHO BẠN</h2>
+                    <div class="room__sort">
+                        <p class="room__sort-desc">Sắp xếp:</p>
+
+                        <a
+                            href="#!"
+                            class="room__sort-item room__sort-item-active room__sort-desc"
+                            >Mới nhất</a
+                        >
+
+                        <a href="#!" class="room__sort-item room__sort-desc"
+                            >Giá cao nhất</a
+                        >
+
+                        <a href="#!" class="room__sort-item room__sort-desc"
+                            >Giá thấp nhất</a
+                        >
+                    </div>
                     <div class="room__list">
                         <article class="room__item">
                             <figure class="room__item-img-wrap">
@@ -642,6 +662,17 @@
                                 <p>Đặt lịch xem</p>
                             </button>
                         </article>
+                    </div>
+
+                    <div class="room__control">
+                        <button class="room__page-btn room__page-current">
+                            1
+                        </button>
+                        <button class="room__page-btn">2</button>
+                        <button class="room__page-btn">3</button>
+                        <button class="room__page-btn">
+                            <i class="fa-solid fa-angles-right"></i>
+                        </button>
                     </div>
                 </div>
             </figure>
