--- a/room.html
+++ b/room.html
@@ -391,7 +391,7 @@
                             </div>
                         </div>
 
-                        <div class="info__right show-on-pc">
+                        <div class="info__right hide-on-mobie">
                             <div class="utility">
                                 <h2 class="utility__heading">
                                     Tiện ích khu trọ
