--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <script defer src="./script.js"></script>
         <title>An home</title>
     </head>
-    <body class="disable-scroll">
+    <body>
         <header class="header">
             <div class="container">
                 <div class="header__wrapper">
@@ -171,6 +171,7 @@
         <div class="pop-up-wrapper">
             <input
                 hidden
+                checked
                 type="checkbox"
                 name=""
                 id="pop-up-checkbox"
