--- a/index.html
+++ b/index.html
@@ -106,25 +106,27 @@
     <body>
         <header class="header">
             <div class="container">
-                <div class="header__wrapper">
+                <nav class="header__wrapper">
                     <a class="header__link-logo" href="index.html">
                         Anhome Group
                     </a>
 
                     <ul id="navbar" class="navbar show-on-pc">
                         <li class="header__item">
-                            <a href="#!" class="header__link">Trang chủ</a>
+                            <a href="#" class="header__link">Trang chủ</a>
                         </li>
                         <li class="header__item">
-                            <a href="#!" class="header__link">Phòng trọ</a>
-                        </li>
-
-                        <li class="header__item">
-                            <a href="#!" class="header__link">Thông tin</a>
+                            <a href="#room" class="header__link">Phòng trọ</a>
                         </li>
 
                         <li class="header__item">
-                            <a href="#!" class="header__link">Liên hệ</a>
+                            <a href="#turtorial" class="header__link"
+                                >Thông tin</a
+                            >
+                        </li>
+
+                        <li class="header__item">
+                            <a href="#footer" class="header__link">Liên hệ</a>
                         </li>
 
                         <li class="header__item">
@@ -164,7 +166,7 @@
                             </script>
                         </div>
                     </div>
-                </div>
+                </nav>
             </div>
         </header>
 
@@ -258,7 +260,7 @@
                 </div>
             </div>
 
-            <figure class="room">
+            <figure id="room" class="room">
                 <div class="container">
                     <div class="room__heading-wrap">
                         <h1 class="room__heading">
@@ -800,7 +802,7 @@
                 </div>
             </figure>
 
-            <figure class="turtorial">
+            <figure id="turtorial" class="turtorial">
                 <div class="container">
                     <div class="turtorial__inner">
                         <div class="tutorial__left">
@@ -960,7 +962,7 @@
             </figure>
         </main>
 
-        <footer class="footer">
+        <footer id="footer" class="footer">
             <div class="container">
                 <div class="footer__row">
                     <div class="footer__column">
