--- a/room.html
+++ b/room.html
@@ -108,14 +108,14 @@
     <body>
         <header class="header">
             <div class="container">
-                <div class="header__wrapper">
+                <nav class="header__wrapper">
                     <a class="header__link-logo" href="index.html">
                         Anhome Group
                     </a>
 
                     <ul id="navbar" class="navbar show-on-pc">
                         <li class="header__item">
-                            <a href="#!" class="header__link">Trang chủ</a>
+                            <a href="./index.html" class="header__link">Trang chủ</a>
                         </li>
                         <li class="header__item">
                             <a href="#!" class="header__link">Phòng trọ</a>
@@ -126,7 +126,7 @@
                         </li>
 
                         <li class="header__item">
-                            <a href="#!" class="header__link">Liên hệ</a>
+                            <a href="#footer" class="header__link">Liên hệ</a>
                         </li>
 
                         <li class="header__item">
@@ -166,7 +166,7 @@
                             </script>
                         </div>
                     </div>
-                </div>
+                </nav>
             </div>
         </header>
 
@@ -223,7 +223,7 @@
                                 />
                             </figure>
                         </div>
-                        
+
                         <button class="btn-control btn-prev">
                             <i class="fa-solid fa-chevron-left"></i>
                         </button>
@@ -297,13 +297,13 @@
                                             </div>
 
                                             <div class="room-list__bottom-item">
-                                                <p>Nước (Kcđh)</p>
+                                                <p>Nước</p>
                                                 <strong>80.000₫</strong>
                                                 <p>Người</p>
                                             </div>
 
                                             <div class="room-list__bottom-item">
-                                                <p>Số người ở</p>
+                                                <p>Số người</p>
                                                 <strong>3</strong>
                                                 <p>Người</p>
                                             </div>
@@ -346,13 +346,13 @@
                                             </div>
 
                                             <div class="room-list__bottom-item">
-                                                <p>Nước (Kcđh)</p>
+                                                <p>Nước</p>
                                                 <strong>80.000₫</strong>
                                                 <p>Người</p>
                                             </div>
 
                                             <div class="room-list__bottom-item">
-                                                <p>Số người ở</p>
+                                                <p>Số người</p>
                                                 <strong>3</strong>
                                                 <p>Người</p>
                                             </div>
@@ -395,13 +395,13 @@
                                             </div>
 
                                             <div class="room-list__bottom-item">
-                                                <p>Nước (Kcđh)</p>
+                                                <p>Nước</p>
                                                 <strong>80.000₫</strong>
                                                 <p>Người</p>
                                             </div>
 
                                             <div class="room-list__bottom-item">
-                                                <p>Số người ở</p>
+                                                <p>Số người</p>
                                                 <strong>3</strong>
                                                 <p>Người</p>
                                             </div>
@@ -444,13 +444,13 @@
                                             </div>
 
                                             <div class="room-list__bottom-item">
-                                                <p>Nước (Kcđh)</p>
+                                                <p>Nước</p>
                                                 <strong>80.000₫</strong>
                                                 <p>Người</p>
                                             </div>
 
                                             <div class="room-list__bottom-item">
-                                                <p>Số người ở</p>
+                                                <p>Số người</p>
                                                 <strong>3</strong>
                                                 <p>Người</p>
                                             </div>
@@ -550,7 +550,7 @@
             </div>
         </main>
 
-        <footer class="footer">
+        <footer id="footer" class="footer">
             <div class="container">
                 <div class="footer__row">
                     <div class="footer__column">
