--- a/room.html
+++ b/room.html
@@ -102,6 +102,7 @@
         <!-- Responsive -->
         <link rel="stylesheet" href="./assets/css/responsive.css" />
         <!-- Script -->
+        <script defer src="./room.js"></script>
         <script defer src="./script.js"></script>
         <title>An home</title>
     </head>
