--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
                         <p class="room__sort-title">Sắp xếp:</p>
 
                         <a
+                            title="Mới nhất"
                             href="#!"
                             class="room__sort-item room__sort-item-active room__sort-desc"
                             >Mới nhất</a
