--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                                         6.5 triệu / tháng
                                     </p>
                                     <p class="row__item-btn-desc">
-                                        Đặt lịch xem
+                                        Xem chi tiết
                                     </p>
                                 </div>
                             </article>
@@ -367,7 +367,7 @@
                                         6.5 triệu / tháng
                                     </p>
                                     <p class="row__item-btn-desc">
-                                        Đặt lịch xem
+                                        Xem chi tiết
                                     </p>
                                 </div>
                             </article>
@@ -412,7 +412,7 @@
                                         6.5 triệu / tháng
                                     </p>
                                     <p class="row__item-btn-desc">
-                                        Đặt lịch xem
+                                        Xem chi tiết
                                     </p>
                                 </div>
                             </article>
@@ -457,7 +457,7 @@
                                         6.5 triệu / tháng
                                     </p>
                                     <p class="row__item-btn-desc">
-                                        Đặt lịch xem
+                                        Xem chi tiết
                                     </p>
                                 </div>
                             </article>
@@ -502,7 +502,7 @@
                                         6.5 triệu / tháng
                                     </p>
                                     <p class="row__item-btn-desc">
-                                        Đặt lịch xem
+                                        Xem chi tiết
                                     </p>
                                 </div>
                             </article>
@@ -547,7 +547,7 @@
                                         6.5 triệu / tháng
                                     </p>
                                     <p class="row__item-btn-desc">
-                                        Đặt lịch xem
+                                        Xem chi tiết
                                     </p>
                                 </div>
                             </article>
@@ -592,7 +592,7 @@
                                         6.5 triệu / tháng
                                     </p>
                                     <p class="row__item-btn-desc">
-                                        Đặt lịch xem
+                                        Xem chi tiết
                                     </p>
                                 </div>
                             </article>
@@ -637,7 +637,7 @@
                                         6.5 triệu / tháng
                                     </p>
                                     <p class="row__item-btn-desc">
-                                        Đặt lịch xem
+                                        Xem chi tiết
                                     </p>
                                 </div>
                             </article>
@@ -682,7 +682,7 @@
                                         6.5 triệu / tháng
                                     </p>
                                     <p class="row__item-btn-desc">
-                                        Đặt lịch xem
+                                        Xem chi tiết
                                     </p>
                                 </div>
                             </article>
@@ -727,7 +727,7 @@
                                         6.5 triệu / tháng
                                     </p>
                                     <p class="row__item-btn-desc">
-                                        Đặt lịch xem
+                                        Xem chi tiết
                                     </p>
                                 </div>
                             </article>
@@ -772,7 +772,7 @@
                                         6.5 triệu / tháng
                                     </p>
                                     <p class="row__item-btn-desc">
-                                        Đặt lịch xem
+                                        Xem chi tiết
                                     </p>
                                 </div>
                             </article>
@@ -817,7 +817,7 @@
                                         6.5 triệu / tháng
                                     </p>
                                     <p class="row__item-btn-desc">
-                                        Đặt lịch xem
+                                        Xem chi tiết
                                     </p>
                                 </div>
                             </article>
