--- a/room.html
+++ b/room.html
@@ -278,7 +278,7 @@
                                                 </p>
                                                 <p class="room-list__status">
                                                     (Lưu ý: Chỉ nhận HD 12
-                                                    tháng)
+                                                    tháng. Cọc trước 1 tháng)
                                                 </p>
                                             </div>
 
@@ -654,7 +654,7 @@
                                                 </p>
                                                 <p class="room-list__status">
                                                     (Lưu ý: Chỉ nhận HD 12
-                                                    tháng)
+                                                    tháng. Cọc trước 1 tháng)
                                                 </p>
                                             </div>
 
@@ -1030,7 +1030,7 @@
                                                 </p>
                                                 <p class="room-list__status">
                                                     (Lưu ý: Chỉ nhận HD 12
-                                                    tháng)
+                                                    tháng. Cọc trước 1 tháng)
                                                 </p>
                                             </div>
 
@@ -1406,7 +1406,7 @@
                                                 </p>
                                                 <p class="room-list__status">
                                                     (Lưu ý: Chỉ nhận HD 12
-                                                    tháng)
+                                                    tháng. Cọc trước 1 tháng)
                                                 </p>
                                             </div>
 
