--- a/index.html
+++ b/index.html
@@ -1072,15 +1072,16 @@
                     </div>
                     <div class="footer__column">
                         <h3 class="footer__title">Bản đồ</h3>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1003509.3493643086!2d106.711527!3d10.73769!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f9b33053ec3%3A0x59e19c7585923791!2zMjIgxJDGsOG7nW5nIHPhu5EgMzcsIFTDom4gUGhvbmcsIFF14bqtbiA3LCBUaMOgbmggcGjhu5EgSOG7kyBDaMOtIE1pbmgsIFZp4buHdCBOYW0!5e0!3m2!1svi!2sus!4v1690979811008!5m2!1svi!2sus"
-                            width="300"
-                            height="200"
-                            style="border: 0"
-                            allowfullscreen=""
-                            loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"
-                        ></iframe>
+                        <div class="footer__map">
+                            <iframe
+                                class="footer__iframe"
+                                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1003509.3493643086!2d106.711527!3d10.73769!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f9b33053ec3%3A0x59e19c7585923791!2zMjIgxJDGsOG7nW5nIHPhu5EgMzcsIFTDom4gUGhvbmcsIFF14bqtbiA3LCBUaMOgbmggcGjhu5EgSOG7kyBDaMOtIE1pbmgsIFZp4buHdCBOYW0!5e0!3m2!1svi!2sus!4v1690979811008!5m2!1svi!2sus"
+                                style="border: 0"
+                                allowfullscreen=""
+                                loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"
+                            ></iframe>
+                        </div>
                     </div>
                 </div>
 
