--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
                         </li>
 
                         <li class="header__item">
-                            <a href="#footer" class="header__link">Liên hệ</a>
+                            <a href="./contact.html" class="header__link">Liên hệ</a>
                         </li>
 
                         <li class="header__item">
-                            <a href="#!" class="header__link">Tuyển dụng</a>
+                            <a href="./work.html" class="header__link">Tuyển dụng</a>
                         </li>
 
                         <li class="header__item">
