--- a/room.html
+++ b/room.html
@@ -125,7 +125,7 @@
                         </li>
 
                         <li class="header__item">
-                            <a href="#!" class="header__link">Thông tin</a>
+                            <a href="./contact.html" class="header__link">Thông tin</a>
                         </li>
 
                         <li class="header__item">
@@ -133,7 +133,7 @@
                         </li>
 
                         <li class="header__item">
-                            <a href="#!" class="header__link">Tuyển dụng</a>
+                            <a href="./work.html" class="header__link">Tuyển dụng</a>
                         </li>
                     </ul>
 
@@ -177,6 +177,7 @@
             <div class="room">
                 <div class="container">
                     <div class="room__img-list">
+                        <h1 class="room__img-list-heading">Hình ảnh tổng quan tòa nhà</h1>
                         <div class="room__img-container">
                             <figure class="room__img-wrap">
                                 <img
