--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                     <ul id="navbar" class="navbar show-on-pc">
                         <li class="header__item">
-                            <a href="#" class="header__link">Trang chủ</a>
+                            <a href="#" class="header__link active">Trang chủ</a>
                         </li>
 
                         <li class="header__item">
@@ -129,7 +129,7 @@
                         </li>
 
                         <li class="header__item">
-                            <a href="./html/work.html" class="header__link"
+                            <a href="./html/job.html" class="header__link"
                                 >Tuyển dụng</a
                             >
                         </li>
@@ -214,6 +214,7 @@
                     class="contact-img hide-on-pc"
                     src="./assets//icons/mess.png"
                 />
+
             </div>
 
             <div class="filter">
