--- a/html/contact.html
+++ b/html/contact.html
@@ -102,7 +102,7 @@
         <!-- Contact.css -->
         <link rel="stylesheet" href="../assets/css/contact.css" />
         <!-- Script -->
-        <script defer src="../script.js"></script>
+        <script defer src="../script"></script>
         <title>An home</title>
     </head>
     <body class="body">
