--- a/html/room.html
+++ b/html/room.html
@@ -102,8 +102,8 @@
         <!-- Responsive -->
         <link rel="stylesheet" href="../assets/css/responsive.css" />
         <!-- Script -->
-        <script defer src="../room.js"></script>
-        <script defer src="../script.js"></script>
+        <script defer src="../script"></script>
+        <script defer src="../script/room.js"></script>
         <title>An home</title>
     </head>
     <body>
