--- a/html/job.html
+++ b/html/job.html
@@ -102,8 +102,8 @@
         <!-- job.css -->
         <link rel="stylesheet" href="../assets/css/job.css" />
         <!-- Script -->
-        <script defer src="../script.js"></script>
-        <script defer src="../job.js"></script>
+        <script defer src="../script"></script>
+        <script defer src="../script/job.js"></script>
         <title>An home</title>
     </head>
     <body class="body">
