--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <!-- Responsive -->
         <link rel="stylesheet" href="./assets/css/responsive.css" />
         <!-- Script -->
-        <script defer src="./script.js"></script>
+        <script defer src="./script"></script>
         <title>An home</title>
     </head>
     <body class="stop-scrolling">
